--- a/proxylist.yaml
+++ b/proxylist.yaml
@@ -43,21 +43,11 @@ payload:
   - DOMAIN-SUFFIX,skydrive.wns.windows.com
   - DOMAIN-SUFFIX,spoprod-a.akamaihd.net
   - DOMAIN-SUFFIX,storage.msn.com
-#  - DOMAIN-SUFFIX,aria.microsoft.com
-
-# Twitter
-  - DOMAIN-SUFFIX,t.co
-  - DOMAIN-SUFFIX,twimg.co
-  - DOMAIN-SUFFIX,twimg.com
-  - DOMAIN-SUFFIX,twimg.org
 
 # Telegram
   - DOMAIN-SUFFIX,t.me
   - DOMAIN-SUFFIX,tdesktop.com
-  - DOMAIN-SUFFIX,telegra.ph
-  - DOMAIN-SUFFIX,telegram.me
-  - DOMAIN-SUFFIX,telegram.org
-  - DOMAIN-SUFFIX,telesco.pe
+  - DOMAIN-KEYWORD,telegra
   - IP-CIDR,91.108.0.0/16
   - IP-CIDR,109.239.140.0/24
   - IP-CIDR,149.154.160.0/20
