--- a/proxylist.yaml
+++ b/proxylist.yaml
@@ -34,6 +34,7 @@ payload:
   - DOMAIN-SUFFIX,gravatar.com
   - DOMAIN-SUFFIX,notion.so
   - DOMAIN-SUFFIX,gstatic.com
+  - DOMAIN-KEYWORD,intercomm
 
 
 # OneDrive
