--- a/rejectlist.yaml
+++ b/rejectlist.yaml
@@ -47,7 +47,9 @@ payload:
   - DOMAIN-SUFFIX,pcs-sdk-server.alibaba.com
   - DOMAIN-SUFFIX,h-adashx.ut.taobao.com
   - DOMAIN-SUFFIX,pcapp-data-collect.youku.com
+  - DOMAIN-SUFFIX,browser.pipe.aria.microsoft.com
 
+  # Netease
   - DOMAIN-SUFFIX,a.youdao.com
   - DOMAIN-SUFFIX,adgeo.corp.163.com
   - DOMAIN-SUFFIX,analytics.126.net
@@ -421,14 +423,3 @@ payload:
   - DOMAIN-SUFFIX,wbclick.mobile.sina.cn
   - DOMAIN-SUFFIX,wbpctips.mobile.sina.cn
   - DOMAIN-SUFFIX,zymo.mps.weibo.com
-
-  # Twitter
-  - DOMAIN-SUFFIX,ads-twitter.com
-  - DOMAIN-SUFFIX,ads.twitter.com
-  - DOMAIN-SUFFIX,analytics.twitter.com
-  - DOMAIN-SUFFIX,p.twitter.com
-  - DOMAIN-SUFFIX,scribe.twitter.com
-  - DOMAIN-SUFFIX,syndication-o.twitter.com
-  - DOMAIN-SUFFIX,syndication.twitter.com
-  - DOMAIN-SUFFIX,tellapart.com
-  - DOMAIN-SUFFIX,urls.api.twitter.com
