--- a/proxylist.yaml
+++ b/proxylist.yaml
@@ -1,62 +1,61 @@
-payload:
-  - DOMAIN-SUFFIX,openai.com
-  - DOMAIN-SUFFIX,ai.com
-  - DOMAIN-SUFFIX,auth0.com
-  - DOMAIN-SUFFIX,challenges.cloudflare.com
-  - DOMAIN-SUFFIX,stripe.com
-  - DOMAIN-SUFFIX,poe.com
+HOST-SUFFIX,openai.com
+HOST-SUFFIX,ai.com
+HOST-SUFFIX,auth0.com
+HOST-SUFFIX,challenges.cloudflare.com
+HOST-SUFFIX,stripe.com
+HOST-SUFFIX,poe.com
   
 # 国外域名关键字
-  - DOMAIN-KEYWORD,github
-  - DOMAIN-KEYWORD,gmail
-  - DOMAIN-KEYWORD,google
-  - DOMAIN-KEYWORD,instagram
-  - DOMAIN-KEYWORD,porn
-  - DOMAIN-KEYWORD,sci-hub
-  - DOMAIN-KEYWORD,spotify
-  - DOMAIN-KEYWORD,telegram
-  - DOMAIN-KEYWORD,twitter
-  - DOMAIN-KEYWORD,whatsapp
-  - DOMAIN-KEYWORD,youtube
-  - DOMAIN-KEYWORD,ytimg
-  - DOMAIN-KEYWORD,ggpht
-  - DOMAIN-KEYWORD,amazon
-  - DOMAIN-KEYWORD,brave
-  - DOMAIN-KEYWORD,v2ex
-  - DOMAIN-KEYWORD,facebook
-  - DOMAIN-KEYWORD,cloudflare
-  - DOMAIN-KEYWORD,azure
-  - DOMAIN-KEYWORD,amazon
-  - DOMAIN-SUFFIX,wiktionary.org
-  - DOMAIN-SUFFIX,wikimedia.org
-  - DOMAIN-SUFFIX,wikipedia.org
-  - DOMAIN-SUFFIX,yt.be
-  - DOMAIN-SUFFIX,gravatar.com
-  - DOMAIN-SUFFIX,notion.so
-  - DOMAIN-SUFFIX,gstatic.com
-  - DOMAIN-KEYWORD,intercom
-  - DOMAIN-SUFFIX,live.net
-  - DOMAIN-SUFFIX,msedge.net
-  - DOMAIN-SUFFIX,uk
+HOST-KEYWORD,github
+HOST-KEYWORD,gmail
+HOST-KEYWORD,google
+HOST-KEYWORD,instagram
+HOST-KEYWORD,porn
+HOST-KEYWORD,sci-hub
+HOST-KEYWORD,spotify
+HOST-KEYWORD,telegram
+HOST-KEYWORD,twitter
+HOST-KEYWORD,whatsapp
+HOST-KEYWORD,youtube
+HOST-KEYWORD,ytimg
+HOST-KEYWORD,ggpht
+HOST-KEYWORD,amazon
+HOST-KEYWORD,brave
+HOST-KEYWORD,v2ex
+HOST-KEYWORD,facebook
+HOST-KEYWORD,cloudflare
+HOST-KEYWORD,azure
+HOST-KEYWORD,amazon
+HOST-SUFFIX,wiktionary.org
+HOST-SUFFIX,wikimedia.org
+HOST-SUFFIX,wikipedia.org
+HOST-SUFFIX,yt.be
+HOST-SUFFIX,gravatar.com
+HOST-SUFFIX,notion.so
+HOST-SUFFIX,gstatic.com
+HOST-KEYWORD,intercom
+HOST-SUFFIX,live.net
+HOST-SUFFIX,msedge.net
+HOST-SUFFIX,uk
 
 # OneDrive
-  - DOMAIN-KEYWORD,1drv
-  - DOMAIN-KEYWORD,onedrive
-  - DOMAIN-KEYWORD,skydrive
-  - DOMAIN-SUFFIX,livefilestore.com
-  - DOMAIN-SUFFIX,oneclient.sfx.ms
-  - DOMAIN-SUFFIX,photos.live.com
-  - DOMAIN-SUFFIX,skydrive.wns.windows.com
-  - DOMAIN-SUFFIX,spoprod-a.akamaihd.net
-  - DOMAIN-SUFFIX,storage.msn.com
+HOST-KEYWORD,1drv
+HOST-KEYWORD,onedrive
+HOST-KEYWORD,skydrive
+HOST-SUFFIX,livefilestore.com
+HOST-SUFFIX,oneclient.sfx.ms
+HOST-SUFFIX,photos.live.com
+HOST-SUFFIX,skydrive.wns.windows.com
+HOST-SUFFIX,spoprod-a.akamaihd.net
+HOST-SUFFIX,storage.msn.com
 
 # Telegram
-  - DOMAIN-SUFFIX,t.me
-  - DOMAIN-SUFFIX,tdesktop.com
-  - DOMAIN-KEYWORD,telegra
-  - IP-CIDR,91.108.0.0/16
-  - IP-CIDR,109.239.140.0/24
-  - IP-CIDR,149.154.160.0/20
-  - IP-CIDR6,2001:67c:4e8::/48
-  - IP-CIDR6,2001:b28:f23d::/48
-  - IP-CIDR6,2001:b28:f23f::/48
+HOST-SUFFIX,t.me
+HOST-SUFFIX,tdesktop.com
+HOST-KEYWORD,telegra
+IP-CIDR,91.108.0.0/16
+IP-CIDR,109.239.140.0/24
+IP-CIDR,149.154.160.0/20
+IP-CIDR6,2001:67c:4e8::/48
+IP-CIDR6,2001:b28:f23d::/48
+IP-CIDR6,2001:b28:f23f::/48
